--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -1,6 +1,11 @@
-<div>
-  Hi, there {{ name }}
-
-  <input type="text" [(ngModel)]="name" />
-  <p>{{ name }}</p>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <h3>I'm in the app component</h3>
+      <hr />
+      <app-servers></app-servers>
+    </div>
+  </div>
 </div>
+<app-warning-alert></app-warning-alert>
+<app-success-alert></app-success-alert>
